--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 					</nav>
 				</section>
 
-				<section id="contents_page" class="cont cont_xs1 cont_sm1" style="--cont-width: 80%;float: right;"></section>
+				<section id="contents_page" class="cont cont_xs1 cont_sm1" style="--cont-width: 80%;float: right;">
+					404 Not found.
+				</section>
 			</section>
 		</main>
 
@@ -49,7 +51,4 @@
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		request("https://docs.google.com/document/d/e/2PACX-1vTlCY0HJu7Oa6j7TGNY37ESIzCvZqxZUPVvTj4ljn-3U-dWT48dhvEIEs8GU5_E5ldS3QVHDz6sJ2K0/pub?embedded=true","putins_make_page_from_gdoc","contents_nav","contents_page","Home");
-	</script>
 </html>
