--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 			</section>
 		</main>
 
-		<footer class="cont1" id="contact"></footer>
+		<footer class="cont1" id="contact">
+			<span style="float: right;float: right;padding-top: 1%;padding-right: 1%;">Developed by Dr. Vinayak Kale</span>
+		</footer>
 	</body>
 
 	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
