--- a/404.html
+++ b/404.html
@@ -5,15 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="./css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/design/layout.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/design/default.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/elements/nav/nav.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/elements/media/media.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/elements/button/button.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/utils/css/loading.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/utils/putins/google.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website--modules/design/keyframes/plain.css">
 		<!-- https://sites-admin.github.io/website-modules -->
 	</head>
 	<body>
@@ -52,13 +52,13 @@
 		</footer>
 	</body>
 
-	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/css/loading.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/utils/css/loading.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website--modules/elements/nav/nav.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		request_promise("https://static-data.a4u.co.in/mech/staff-gdoc-links.json")
 			.then(
@@ -68,7 +68,7 @@
 					for(let staff of staff_pages)
 					{
 						let path_arr=location.pathname.split("/");
-						if(path_arr[1]==staff[0])
+						if(path_arr[1]==staff[0].replaceAll(" ","").toLowerCase())
 						{
 							request(staff[1],"putins_make_page_from_gdoc","contents_nav","contents_page","Home");
 							return;
