--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
-			<img class="cont1" src="./images/logo.jpg">
+			<a target="_blank" href="https://a4u.co.in/"><img class="cont1" src="./images/logo.jpg"></a>
 		</header>
 		<main class="cont1">
 			<section style="text-align: center;overflow: hidden;background-color: var(--main-color-2);" class="u1">
