--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</header>
 		<main class="cont1">
 			<section style="text-align: center;overflow: hidden;background-color: var(--main-color-2);" class="u1">
-				<span style="text-align: center;float: left;background-color: var(--main-color-2);color: var(--main-color);margin-top: 4px;margin-bottom: 4px;animation: move_lr 16s infinite;" class="cont1">
+				<span id="top_scroll_text" style="text-align: center;float: left;background-color: var(--main-color-2);color: var(--main-color);margin-top: 4px;margin-bottom: 4px;animation: move_lr 16s infinite;" class="cont1">
 					Welcome to a4u.co.in
 				</span>
 			</section>
@@ -38,7 +38,6 @@
 				</section>
 
 				<section id="contents_page" class="cont cont_xs1 cont_sm1" style="--cont-width: 80%;float: right;">
-					404 Not found.
 				</section>
 			</section>
 		</main>
@@ -55,4 +54,8 @@
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		request("https://docs.google.com/document/d/e/2PACX-1vQjXPMkabDnMPoib_iUfutrY9hdmFU_4qDt7WKflz2nlHOW6s7xo84AyglPA9XIKf8AbkyQpYyvlkrX/pub?embedded=true","putins_make_page_from_gdoc","contents_nav","contents_page","Home");
+		
+	</script>
 </html>
