--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<main class="cont1">
 			<section style="text-align: center;overflow: hidden;background-color: var(--main-color-2);" class="u1">
 				<span id="top_scroll_text" style="text-align: center;float: left;background-color: var(--main-color-2);color: var(--main-color);margin-top: 4px;margin-bottom: 4px;animation: move_lr 16s infinite;" class="cont1">
-					Welcome to a4u.co.in
+					Welcome to Academics for you!
 				</span>
 			</section>
 
