--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
@@ -53,10 +54,12 @@
 	</body>
 
 	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/css/loading.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/utils/notices/notices.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
 	<script type="text/javascript">
