--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -5,19 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/table/table.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/form/form.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/in-page-images.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/background-images.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/iframe/iframe-svg.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/svg/svg.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/layout.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/default.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/nav/nav.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/table/table.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/form/form.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/button/button.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/img/in-page-images.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/img/background-images.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/media.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/keyframes/plain.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/iframe/iframe-svg.css">
+		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/svg/svg.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
 		<!-- https://sites-admin.github.io/website-modules -->
@@ -69,9 +69,6 @@
 
 			<form class="media1" onsubmit='event.preventDefault();form_wait(event.target);form_JSON_send(event.target)' class="u1" data-form-submit-target="https://script.google.com/macros/s/AKfycby5Ykpmf52ifTHmUjgD4tWsVMR5UXcVgFmf0XKPImdnTeQbC9w/exec" data-custom-JSON-to-send-string='{"gscript_callback_function": "notice_post"}' data-show-id="no" data-send-creds="yes" id="notice_form" style="display: none;">
 				<span>You are logged in as <span id="login_type">HOD</span>.</span>
-				<script type="text/javascript">
-					document.getElementById('login_type').innerText=
-				</script>
 				<table class="u1">
 					<tr>
 						<td colspan="2">
@@ -161,15 +158,15 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
 	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/form/form.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
-	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script> 
+	<script src="http://192.168.1.3:81/includes/request/request.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/includes/request/google.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/design/default.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/elements/media/img/background-images.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/elements/button/button.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/elements/form/form.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="http://192.168.1.3:81/svg/svg.js" type="text/javascript"></script> 
+	<script src="http://192.168.1.3:81/elements/nav/nav.js" type="text/javascript"></script> 
 	<script type="text/javascript">
 		$('#notice_contents').trumbowyg({
 			btns: [
