--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -5,19 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/default.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/table/table.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/form/form.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/img/in-page-images.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/img/background-images.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/design/keyframes/plain.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/elements/iframe/iframe-svg.css">
-		<link rel="stylesheet" type="text/css" href="http://192.168.1.3:81/svg/svg.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/table/table.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/form/form.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/in-page-images.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/img/background-images.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/iframe/iframe-svg.css">
+		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/svg/svg.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.min.css">
 		<link rel="stylesheet" type="text/css" href="/rtf/trumbowyg.colors.min.css">
 		<!-- https://sites-admin.github.io/website-modules -->
@@ -158,15 +158,15 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
 	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/includes/request/request.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/includes/request/google.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/design/default.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/elements/button/button.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/elements/form/form.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="http://192.168.1.3:81/svg/svg.js" type="text/javascript"></script> 
-	<script src="http://192.168.1.3:81/elements/nav/nav.js" type="text/javascript"></script> 
+	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/form/form.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
+	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script> 
 	<script type="text/javascript">
 		$('#notice_contents').trumbowyg({
 			btns: [
