--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
-		<link rel="stylesheet" type="text/css" href="./css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
+		<link id="variables_css" rel="stylesheet" type="text/css" href="./css/variables.css">
+		<link id="layout_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
+		<link id="default_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
+		<link id="nav_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
+		<link id="media_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
+		<link id="button_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
+		<link id="putins_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
+		<link id="notices_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
+		<link id="loading_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
+		<link id="google_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
+		<link id="plain_css" rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/keyframes/plain.css">
 		<!-- https://sites-admin.github.io/website-modules -->
 	</head>
 	<body>
