--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
-		<link rel="stylesheet" type="text/css" href="./css/variables.css">
+		<link rel="stylesheet" type="text/css" href="/css/variables.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<header class="cont1" style="margin: 0;">
-			<a target="_blank" href="https://a4u.co.in/"><img class="cont1" src="./images/logo.jpg"></a>
+			<a target="_blank" href="https://a4u.co.in/"><img class="cont1" src="/images/logo.jpg"></a>
 		</header>
 		<main class="cont1">
 			<section style="text-align: center;overflow: hidden;background-color: var(--main-color-2);" class="u1">
@@ -63,29 +63,57 @@
 	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
 	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		request_promise("https://static-data.a4u.co.in/mech/staff-gdoc-links.json")
-			.then(
-				(res)=>
-				{
-					const staff_pages=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["stafflist"];
-					for(let staff of staff_pages)
+		let path_arr=location.pathname.split("/");
+		if(path_arr[1]!="notice")
+		{
+			request_promise("https://static-data.a4u.co.in/mech/staff-gdoc-links.json")
+				.then(
+					(res)=>
 					{
-						let path_arr=location.pathname.split("/");
-						if(path_arr[1]==staff[0].replaceAll(" ","").toLowerCase())
+						const staff_pages=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["stafflist"];
+						for(let staff of staff_pages)
 						{
-							document.getElementsByTagName('title')[0].innerText=staff[0];
-							request(staff[1],"putins_make_page_from_gdoc","contents_nav","contents_page","Home","https://static-data.a4u.co.in/mech/images/");
-							return;
+							let path_arr=location.pathname.split("/");
+							if(path_arr[1]==staff[0].replaceAll(" ","").toLowerCase())
+							{
+								document.getElementsByTagName('title')[0].innerText=staff[0];
+								request(staff[1],"putins_make_page_from_gdoc","contents_nav","contents_page","Home","https://static-data.a4u.co.in/mech/images/");
+								return;
+							}
 						}
-					}
-					document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>"
-
-				},
-				(error)=>
-				{
-					console.error(error);
-					document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>"
-				});
-		
+						document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>";
+					},
+					(error)=>
+					{
+						console.error(error);
+						document.getElementById('contents_page').innerHTML="<big>404 Error parsing page.</big>"
+					});
+		}
+		else
+		{
+			document.getElementById('contents_page').innerHTML="Notice is loading....";
+			document.getElementById('contents_page').parentElement.outerHTML=document.getElementById('contents_page').outerHTML;
+			document.getElementById('contents_page').setAttribute("class","u1");
+			request_promise("https://script.google.com/macros/s/AKfycbzKuzI3GRcXzWsibOhd6S9astw-GGRvsGT3rIa8D1p1JnxE5KsVlPL_/exec?notice_id="+location.pathname.substring(8))
+				.then(
+					(res)=>
+					{
+						document.getElementById('contents_page').innerHTML="";
+						if(JSON.parse(res.response)["notice_error"])
+						{
+							document.getElementById('contents_page').innerHTML="<big>404 Notice not found.</big>";
+						}
+						else
+						{
+							document.getElementById('contents_page').insertAdjacentElement("beforeend",notice_parse(JSON.parse(res.response)["notice"]));
+						}
+					},
+					(error)=>
+					{
+						console.error(error);
+						document.getElementById('contents_page').innerHTML="<big>404 Error parsing notice.</big>"
+					});
+		}
+			
 	</script>
 </html>
