--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/layout.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/design/default.css">
+		<link rel="stylesheet" type="text/css" id="layout_css" href="https://sites-admin.github.io/website-modules/design/layout.css">
+		<link rel="stylesheet" type="text/css" id="default_css" href="https://sites-admin.github.io/website-modules/design/default.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/nav/nav.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/media/media.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/putins.css">
-		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
+		<link rel="stylesheet" type="text/css" id="notices_css" href="https://sites-admin.github.io/website-modules/utils/notices/notices.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/elements/button/button.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/css/loading.css">
 		<link rel="stylesheet" type="text/css" href="https://sites-admin.github.io/website-modules/utils/putins/google.css">
