--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -128,6 +128,28 @@
 					</tr>
 				</table>
 			</form>
+			<section id="contents_page" class="cont1 gdoc_published_contents"></section>
+
+		</main>
+
+		<footer class="cont1" id="contact">
+			<span style="float: right;float: right;padding-top: 1%;padding-right: 1%;">Developed by Dr. Vinayak Kale</span>
+		</footer>
+	</body>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
+	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/elements/form/form.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/utils/putins/google.js" type="text/javascript"></script>
+	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
+	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script> 
+
 			<script type="text/javascript">
 				if(sessionStorage)
 				{
@@ -147,30 +169,13 @@
 				function form_show_next()
 				{
 					document.getElementById('notice_form').style.display="revert";
+					request("https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true","putin_paste",document.getElementById("contents_page"),"request_gdoc_published_inline_contents");
 				}
 				window.addEventListener("beforeunload",function()
 				{
 					sessionStorage.clear();
 				});
 			</script>
-		</main>
-
-		<footer class="cont1" id="contact">
-			<span style="float: right;float: right;padding-top: 1%;padding-right: 1%;">Developed by Dr. Vinayak Kale</span>
-		</footer>
-	</body>
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script src="/rtf/trumbowyg.min.js" type="text/javascript"></script>
-	<script src="/rtf/trumbowyg.colors.min.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/request.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/includes/request/google.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/design/default.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/media/img/background-images.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/button/button.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/elements/form/form.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/utils/putins/putins.js" type="text/javascript"></script>
-	<script src="https://sites-admin.github.io/website-modules/svg/svg.js" type="text/javascript"></script> 
-	<script src="https://sites-admin.github.io/website-modules/elements/nav/nav.js" type="text/javascript"></script> 
 	<script type="text/javascript">
 		$('#notice_contents').trumbowyg({
 			btns: [
