--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -227,6 +227,9 @@
 		#notice_contents *
 		{
 			list-style-type: revert;
+			margin: revert;
+			color: revert;
+			background-color: revert;
 		}
 	</style>
 </html>
