--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<base target="_blank">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
 		<link rel="stylesheet" type="text/css" id="layout_css" href="https://lib.ameonlinesolutions.com/design/layout.css">
