--- a/404.html
+++ b/404.html
@@ -81,7 +81,7 @@
 							if(path_arr[1]==staff[0].replaceAll(" ","").toLowerCase())
 							{
 								document.getElementsByTagName('title')[0].innerText=staff[0];
-								let page=location.hash;
+								let page=location.hash.substr(1);
 								if(!page) page="Home";
 								request(staff[1],"putins_make_page_from_gdoc","contents_nav","contents_page",page,"https://static-data.a4u.co.in/mech/images/");
 								return;
