--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 			</section>
 
 			<section class="u1">
-				<button class="u1 hide_md button_visibility_control" data-button-status="visible" data-button-target="page_menus">
+				<button class="u1 hide_md button_visibility_control" data-button-status="visible" data-button-target="page_menus" data-hide-on-click=".doc_page">
 					<span>Menu</span>
 				</button>
 				<style type="text/css">
