--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -215,7 +215,7 @@
 		});
 	</script>
 	<script type="text/javascript">
-		request_promise("https://static-data.a4u.co.in/mech/roles.json")
+		request_promise("https://n.static-data.a4u.co.in/mech/roles.json")
 			.then(
 				(res)=>
 				{
