--- a/postnotice/index.html
+++ b/postnotice/index.html
@@ -215,22 +215,23 @@
 		});
 	</script>
 	<script type="text/javascript">
-		request_promise("https://n.static-data.a4u.co.in/mech/roles.json")
-			.then(
-				(res)=>
-				{
-					const roles=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["roles"];
+// 		request_promise("https://n.static-data.a4u.co.in/mech/roles.json")
+// 			.then(
+// 				(res)=>
+// 				{
+// 					const roles=JSON.parse(res.response.replaceAll("\n","").replaceAll("\t",""))["roles"];
+					const roles=["HOD","Faculty","Placement","iMESA","Project","Exam","Exam052"];
 					for(let role of roles)
 					{
 						document.getElementById("roles").insertAdjacentHTML("beforeend","<option value=\""+role+"\">"+role+"</option>");
 					}
 
-				},
-				(error)=>
-				{
-					console.error(error);
-					document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>"
-				});
+// 				},
+// 				(error)=>
+// 				{
+// 					console.error(error);
+// 					document.getElementById('contents_page').innerHTML="<big>404 Page not found.</big>"
+// 				});
 		
 	</script>
 
