--- a/404.html
+++ b/404.html
@@ -34,10 +34,10 @@
 					<span>Menu</span>
 				</button>
 				<style type="text/css">
-					#page_menus *
+					/*#page_menus *
 					{
 						background: transparent;
-					}
+					}*/
 				</style>
 				<section class="cont cont_xs1 cont_sm1" style="--cont-width: 20%;" id="page_menus">
 					<nav class="nav_one_active_light">
