--- a/404.html
+++ b/404.html
@@ -6,6 +6,16 @@
 		<base target="_blank">
 		<title>Academics for you</title>
 		<link rel="stylesheet" type="text/css" href="/css/variables.css">
+		
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Black">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+
 		<link rel="stylesheet" type="text/css" id="layout_css" href="https://lib.ameonlinesolutions.com/design/layout.css">
 		<link rel="stylesheet" type="text/css" id="default_css" href="https://lib.ameonlinesolutions.com/design/default.css">
 		<link rel="stylesheet" type="text/css" href="https://lib.ameonlinesolutions.com/elements/nav/nav.css">
