--- a/404.html
+++ b/404.html
@@ -13,8 +13,10 @@
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette">
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
-		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alatsi">
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mogra">
+		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Condiment">
 
 		<link rel="stylesheet" type="text/css" id="layout_css" href="https://lib.ameonlinesolutions.com/design/layout.css">
 		<link rel="stylesheet" type="text/css" id="default_css" href="https://lib.ameonlinesolutions.com/design/default.css">
