--- a/Testing/index.html
+++ b/Testing/index.html
@@ -324,7 +324,8 @@
     }
     function form_show_next(res) {
       document.getElementById("contents_page").innerHTML="Hello";
-      console.log(res);
+      //console.log(res);
+      return;
       //show_notice_form();
       //request(
         //"https://docs.google.com/document/d/e/2PACX-1vRsBaCi0cOGgO6cHJWORkhvZXds_JQN1227KHSd_TxXcaByTD3M-53RFnDPKzYF3klQV_CNilYOsmxU/pub?embedded=true",
